[package]
name = "totper"
version = "0.1.0"
edition = "2021"
authors = ["Jari O. O. Pennanen <ciantic@oksidi.com>"]
license = "MIT"
readme = "README.md"
description = "totper is an CLI utility for stateless TOTP generation"
keywords = ["cli", "totp"]
categories = ["command-line-utilities"]

[dependencies]
totp-lite = "2.0"
base32 = "0.4"