[package]
name = "totper"
version = "0.1.1"
edition = "2021"
authors = ["Jari O. O. Pennanen <ciantic@oksidi.com>"]
license = "MIT"
readme = "README.md"
description = "A tool for stateless TOTP generation"
keywords = ["cli", "totp"]
categories = ["command-line-utilities"]
repository = "https://github.com/Ciantic/totper"

[dependencies]
totp-lite = "2.0"
base32 = "0.4"
atty = "0.2"